rke2/external-secrets/vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-warden
  namespace: external-secrets
spec:
  selector:
    app: vault-warden
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
