rke2/external-secrets/vaultwarden/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vaultwarden
  namespace: external-secrets
  annotations:
    cert-manager.io/cluster-issuer: "cf-issuer"
spec:
  ingressClassName: nginx
  rules:
    - host: vault.hwcopeland.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vault-warden
                port:
                  number: 80
  tls:
    - hosts:
        - "*.hwcopeland.net"
      secretName: cf-wildcard-cert-secret
